--- a/gestion/templates/gestion/base.html
+++ b/gestion/templates/gestion/base.html
@@ -118,7 +118,7 @@
                     <h5 class="text-uppercase fw-bold">Légal</h5>
                     <ul class="list-unstyled">
                         <li><a href="{% url 'gestion:terms_of_service' %}" class="text-reset">Conditions d'Utilisation</a></li>
-                        <li><a href="#!" class="text-reset">Politique de Confidentialité</a></li>
+                        <li><a href="{% url 'gestion:privacy_policy' %}" class="text-reset">Politique de Confidentialité</a></li>
                     </ul>
                 </div>
 
